--- a/static/index.html
+++ b/static/index.html
@@ -42,21 +42,60 @@
               <div class="form-group">
                 <label class="control-label col-sm-2" for="customer_username">UserName:</label>
                 <div class="col-sm-10">
-                  <input type="text" class="form-control" id="customer_name" placeholder="Enter username for Customer">
+                  <input type="text" class="form-control" id="customer_username" placeholder="Enter Username for Customer">
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="control-label col-sm-2" for="customer_password">Password:</label>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control" id="customer_password" placeholder="Enter Password for Customer">
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="control-label col-sm-2" for="customer_firstname">First Name:</label>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control" id="customer_firstname" placeholder="Enter First Name for Customer">
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="control-label col-sm-2" for="customer_lastname">Last Name:</label>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control" id="customer_lastname" placeholder="Enter Last Name for Customer">
+                </div>
+              </div>              
+              <div class="form-group">
+                <label class="control-label col-sm-2" for="customer_address">Address:</label>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control" id="customer_address" placeholder="Enter Address for Customer">
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="control-label col-sm-2" for="customer_phone">Phone Number:</label>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control" id="customer_phone" placeholder="Enter Phone for Customer">
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="control-label col-sm-2" for="customer_email">Email:</label>
+                <div class="col-sm-10">
+                  <input type="text" class="form-control" id="customer_email" placeholder="Enter Email for Customer">
                 </div>
               </div>
               <div class="form-group">
                 <label class="control-label col-sm-2" for="customer_status">Status:</label>
                 <div class="col-sm-10">
-                  <input type="text" class="form-control" id="customer_status" placeholder="Enter status for Customer">
+                  <select class="form-control" id="customer_status">
+                      <option value="0">No</option>
+                      <option value="1">Yes</option>
+                  </select>
                 </div>
               </div>
               <div class="form-group">
                 <label class="control-label col-sm-2" for="customer_promo">Promo:</label>
                 <div class="col-sm-10">
                   <select class="form-control" id="customer_promo">
-                      <option value="true" selected>0</option>
-                      <option value="false">1</option>
+                      <option value="0">No</option>
+                      <option value="1">Yes</option>
                   </select>
                 </div>
               </div>
@@ -77,9 +116,15 @@
             <thead>
             <tr>
                 <th class="col-md-1">ID</th>
-                <th class="col-md-4">UserName</th>
-                <th class="col-md-4">Status</th>
-                <th class="col-md-3">Promo</th>
+                <th class="col-md-1">UserName</th>
+                <th class="col-md-1">Password</th>
+                <th class="col-md-1">FirstName</th>
+                <th class="col-md-1">LastName</th>
+                <th class="col-md-1">Address</th>
+                <th class="col-md-1">PhoneNumber</th>
+                <th class="col-md-1">Email</th>
+                <th class="col-md-1">Status</th>
+                <th class="col-md-1">Promo</th>
             </tr>
             </thead>
           </table>
