--- a/app/static/index.html
+++ b/app/static/index.html
@@ -85,8 +85,8 @@
                 <label class="control-label col-sm-2" for="customer_active">Active:</label>
                 <div class="col-sm-10">
                   <select class="form-control" id="customer_active">
-                      <option value="false">false</option>
-                      <option value="true" selected>true</option>
+                      <option value="false">False</option>
+                      <option value="true" selected>True</option>
                   </select>
                 </div>
               </div>
@@ -94,8 +94,8 @@
                 <label class="control-label col-sm-2" for="customer_promo">Promo:</label>
                 <div class="col-sm-10">
                   <select class="form-control" id="customer_promo">
-                      <option value="false" selected>false</option>
-                      <option value="true">true</option>
+                      <option value="false" selected>False</option>
+                      <option value="true">True</option>
                   </select>
                 </div>
               </div>
