Update with alert messages

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -26,19 +26,7 @@
         <h3>REST API Service</h3>
       </div>
 
-      <div class="alert alert-dismissible alert-success">
-        <h4 class="alert-heading">Success!</h4>
-        <p class="mb-0">Status:</p>
-      </div>
-
-      <div class="alert alert-dismissible alert-warning">
-        <h4 class="alert-heading">Warning!</h4>
-        <p class="mb-0">Status:</p>
-      </div>
-
-      <div class="alert alert-dismissible alert-danger">
-        <h4 class="alert-heading">Error!</h4>
-        <p class="mb-0">Status:</p>
+      <div id="flash_message">
       </div>
 
       <!-- Flash Message -->
