Add "Subscribe" and "Deactive" button

--- a/app/static/index.html
+++ b/app/static/index.html
@@ -48,6 +48,9 @@
                   </div>
                   <button type="submit" class="btn btn-primary" id="retrieve-btn">Retrieve</button>
                   <button type="submit" class="btn btn-danger" id="delete-btn">Delete</button>
+                  <br> <br>
+                  <button type="submit" class="btn btn-warning" id="deactive-btn">Deactive</button>
+                  <button type="submit" class="btn btn-info" id="promo-btn">Subscribe</button>
                 </fieldset>
               </div>
             </div>
